--- a/c4_index.html
+++ b/c4_index.html
@@ -12,7 +12,7 @@
 	<header>
 		<img src="images/town_hall_logo.gif" alt="Town Hall logo" height="80">
 		<h2>San Joaquin Valley Town Hall</h2>
-		<h3>Celebrating our <em class="shadow">75<sup>th</sup></em> Year</h3>
+		<h3>Celebrating our <span class="shadow">75<sup>th</sup></span> Year</h3>
 	</header>
 	<main>
 		<h2>Our Mission</h2>
@@ -30,12 +30,12 @@
 			<li>Single Speaker: $25</li>
 		</ul>
 
-		<h2>This season's guest speakers</h2>
-		<h3 class="month">October<br><a href="speakers/brancaccio.html">David Brancaccio</a></h3>
+		<h1>This season's guest speakers</h1>
+		<h3>October<br><a href="speakers/brancaccio.html">David Brancaccio</a></h3>
 		<img src="images/brancaccio75.jpg" alt="David Brancaccio photo">
-		<h3 class="month">November<br><a href="speakers/sorkin.html">Andrew Ross Sorkin</a></h3>
+		<h3>November<br><a href="speakers/sorkin.html">Andrew Ross Sorkin</a></h3>
 		<img src="images/sorkin75.jpg" alt="Andrew Ross Sorkin photo">
-		<h3 class="month">January<br><a href="speakers/chua.html">Amy Chua</a></h3>
+		<h3>January<br><a href="speakers/chua.html">Amy Chua</a></h3>
 		<img src="images/chua75.jpg" alt="Amy Chua photo">
 	</main>
 	<footer>
